# FunnyOS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Config.cmake  LICENSE.txt  README.md
bootloader/: CMakeLists.txt  Makefile  common.asm  data.asm
bootloader/bootloader/: BootloaderConfig.hpp.in  CMakeLists.txt  bootloader.lds.in
bootloader/bootloader/asm/: bios.asm
bootloader/bootloader/src/: BIOS.cpp  BIOS.hpp  BiosFile.cpp  BiosFile.hpp  Bootloader.cpp  Bootloader.hpp  BootloaderABI.cpp  BootloaderPlatformImpl.cpp  Entry.cpp  HighMemory.cpp  HighMemory.hpp
bootloader/bootloader32/: BootloaderConfig.hpp.in  CMakeLists.txt  bootloader32.lds  bootloader32.lds.in  bootloader32_debug.lds
bootloader/bootloader32/asm/: interrupt_setup.asm  make_memory_map.asm  real_mode.asm  real_mode_intro.asm  start.asm
bootloader/bootloader32/src/: A20Line.cpp  A20Line.hpp  Bootloader32.cpp  Bootloader32.hpp  BootloaderABI.cpp  BootloaderParameters.hpp  BootloaderStdlibPlatformImpl.cpp  DebugMenu.cpp  DebugMenu.hpp  DebugMenuOptions.cpp  DebugMenuOptions.hpp  DebugModeOptions.cpp  DebugModeOptions.hpp  DriveInterface.cpp  DriveInterface.hpp  ElfLoader.cpp  ElfLoader.hpp  Entry.cpp  FileLoader.cpp  FileLoader.hpp  IDT.cpp  IDT.hpp  InterruptSetup.cpp  InterruptSetup.hpp  Interrupts.cpp  Interrupts.hpp  Logging.cpp  Logging.hpp  LowMemoryAllocator.cpp  LowMemoryAllocator.hpp  MemoryMap.cpp  MemoryMap.hpp  Paging.cpp  Paging.hpp  RealMode.cpp  RealMode.hpp  Sleep.cpp  Sleep.hpp  VESA.cpp  VESA.hpp
bootloader/bootsector/: CMakeLists.txt
bootloader/bootsector/commons/: CMakeLists.txt  config.asm.in  load_lba.asm  print.asm
bootloader/bootsector/fat_loader/: CMakeLists.txt  bios_disk_interface.asm  config.h.in  fat_loader.asm  fat_loader.c  fat_loader.lds  fat_loader.lds.in  intro.asm
bootloader/bootsector/mbr/: CMakeLists.txt  mbr.asm  mbr.lds
bootloader/bootsector/stage1/: CMakeLists.txt  stage1.asm  stage1.lds
bootloader/commons/: CMakeLists.txt
bootloader/commons/headers/FunnyOS/BootloaderCommons/: Bootloader.hpp  BootloaderParameters.hpp  InputOutput.hpp  Logging.hpp  LowMemoryAllocator.hpp  Sleep.hpp  VGAInterface.hpp
bootloader/commons/src/: Bootloader.cpp  BootloaderABI.cpp  BootloaderStdlibPlatformImpl.cpp  Logging.cpp  LowMemoryAllocator.cpp  Sleep.cpp  VGAInterface.cpp
bootloader/env64/: CMakeLists.txt  env64.asm  env64.lds
bootloader/stage1/: stage1.asm
bootloader/stage2/: a20line.asm  drive.asm  (+3 more)
bootloader/temp_kernel/: CMakeLists.txt  temp_kernel.asm
cmake/: Linking.cmake
drivers/: CMakeLists.txt
drivers/drive/bios/: CMakeLists.txt
drivers/drive/bios/headers/FunnyOS/Driver/Drive/: BiosDriveInterface.hpp
drivers/drive/bios/src/: BiosDriveInterface.cpp
kernel/: CMakeLists.txt
kernel/base/: CMakeLists.txt  Config.hpp.in
kernel/base/headers/FunnyOS/Kernel/: GDT.hpp  Interrupt.hpp  Kernel.hpp  LogManager.hpp
kernel/base/headers/FunnyOS/Kernel/GFX/: ScreenManager.hpp
kernel/base/headers/FunnyOS/Kernel/MM/: PhysicalMemoryManager.hpp  PhysicalMemoryManager.tcc  VirtualMemoryManager.hpp
kernel/base/headers/FunnyOS/Kernel/VMM/: VirtualMemoryManager.hpp
kernel/base/src/: GDT.cpp  KABI.cpp  Kernel.cpp  LogManager.cpp  PlatformK64.cpp
kernel/base/src/GFX/: ScreenManager.cpp
kernel/base/src/MM/: PhysicalMemoryManager.cpp  VirtualMemoryManager.cpp
kernel/base/src/VMM/: VirtualMemoryManager.cpp
kernel/executable/: CMakeLists.txt  KernelEntry.cpp  kernel.lds.in
misc/: CMakeLists.txt
misc/hardware/: CMakeLists.txt
misc/hardware/asm/: bios.asm
misc/hardware/headers/FunnyOS/Hardware/: BIOS.hpp  CMOS.hpp  CPU.hpp  CPU.tcc  CPU_GNUC.tcc  GDT.hpp  InputOutput.hpp  InputOutput_GNUC.tcc  Interrupts.hpp  Interrupts.tcc  PIC.hpp  PS2.hpp  RealMode.hpp  Serial.hpp  VGA.hpp
misc/hardware/headers/FunnyOS/Hardware/Drive/: DriveInterface.hpp
misc/hardware/headers/FunnyOS/Hardware/GFX/: FontTerminalInterface.hpp  FramebufferInterface.hpp  VGA.hpp
misc/hardware/src/: BIOS.cpp  CMOS.cpp  GDT.cpp  Interrupts.cpp  PIC.cpp  PS2.cpp  RealMode.cpp  Serial.cpp  VGA.cpp  real_mode.asm
misc/hardware/src/GFX/: FontTerminalInterface.cpp  FramebufferInterface.cpp  VGA.cpp
misc/hardware/src/InterruptSetup/: InterruptSetup.cpp  InterruptSetup.hpp  interrupt_setup.asm
misc/memory_allocator/: CMakeLists.txt
misc/memory_allocator/headers/FunnyOS/Misc/MemoryAllocator/: MemoryAllocator.hpp  StaticFragmentedMemoryAllocator.hpp  StaticMemoryAllocator.hpp
misc/memory_allocator/src/: StaticFragmentedMemoryAllocator.cpp  StaticMemoryAllocator.cpp
misc/quick_fat/: CMakeLists.txt
misc/quick_fat/headers/FunnyOS/QuickFat/: QuickFat.h
misc/quick_fat/src/: QuickFat.c
misc/terminalmanager/: CMakeLists.txt
misc/terminalmanager/headers/FunnyOS/Misc/TerminalManager/: ITerminalInterface.hpp  TerminalManager.hpp  TerminalManagerLoggingSink.hpp
misc/terminalmanager/src/: TerminalManager.cpp  TerminalManagerLoggingSink.cpp
scripts/: CMakeLists.txt  build-info.sh.in  build.sh  funnyos.sfdisk  make-image.sh  require-root.sh  run-bochs.sh  run-qemu.sh
stdlib/: CMakeLists.txt  Config.hpp.in
stdlib/headers/FunnyOS/Stdlib/: Algorithm.hpp  Algorithm.tcc  Compiler.hpp  Dynamic.hpp  Dynamic.tcc  DynamicString.hpp  DynamicString.tcc  File.hpp  Functional.hpp  Functional.tcc  Hash.hpp  HashMap.hpp  HashMap.tcc  IniFile.hpp  InitializerList.tcc  IntegerTypes.hpp  IntegerTypes.tcc  LinkedList.hpp  LinkedList.tcc  Logging.hpp  Logging.tcc  Math.hpp  Math.tcc  Memory.hpp  Memory.tcc  New.hpp  Platform.hpp  Stream.hpp  String.hpp  String.tcc  System.hpp  TypeTraits.hpp  Utility.hpp  Utility.tcc  Vector.hpp  Vector.tcc
stdlib/src/: Division.cpp  File.cpp  IniFile.cpp  Logging.cpp  Memory.cpp  NewDelete.cpp  Stream.cpp  String.cpp  System.cpp
stdlib/test/: CMakeLists.txt  Common.hpp  StdlibPlatform.cpp  TestAlgorithm.cpp  TestDynamicString.cpp  TestFile.cpp  TestFunctional.cpp  TestHashMap.cpp  TestIniFile.cpp  TestLinkedList.cpp  TestMemory.cpp  TestString.cpp  TestUtility.cpp  TestVector.cpp  TrackableObject.hpp
targets/: CMakeLists.txt  build-info.sh.in
(+13 files in other folders)
